--- a/django_ecommerce/templates/django_ecommerce/admin/layouts/admin-base.html
+++ b/django_ecommerce/templates/django_ecommerce/admin/layouts/admin-base.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,9 +8,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="csrf-token" content=" {{ csrf_token}}">
-
-  <title> My First Blog</title>
+  <title>My First Blog</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -19,11 +16,11 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
     integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
   {% block 'css' %}
 
-  <!-- remained empty -->
+  <!-- remaind empty -->
 
   {% endblock 'css' %}
 
@@ -31,17 +28,27 @@
 
 <body>
 
-  {% include 'ecommerce/navbar.html' %}
+  <div class="wrapper">
+    {% include 'django_ecommerce/admin/layouts/admin-sidebar.html' %}
+
+    <div id="content" class="container-fluid">
+
+      {% include 'django_ecommerce/admin/layouts/admin-navbar.html' %}
+
+      {% block 'content' %}
+
+      <!-- remaind empty -->
+
+      {% endblock 'content' %}
 
 
-  {% block content %}
 
-  <!-- remained empty -->
-
-  {% endblock content %}
+    </div>
+  </div>
 
 
-  {% include 'blog/footer.html' %}
+
+
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -53,14 +60,25 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  {%block 'scripts' %}
+
+  <!-- remaind empty -->
+
+  {% endblock 'scripts' %}
+
+  <script>
+    $(document).ready(function () {
+
+      $('#sidebarCollapse').on('click', function () {
+        $('#sidebar').toggleClass('active');
+      });
+
+    });
+  </script>
 
 
-  {%block scripts %}
 
-  <!-- remained empty -->
-
-  {% endblock scripts %}
 </body>
 
 </html>
